# valence-solana

./: .gitignore  .gitmodules  Anchor.toml  Cargo.nix  Cargo.toml  README.md  crate-hashes.json  flake.nix  justfile  solana-demo.sh  test-build
crates/registry/: Cargo.toml
crates/registry/src/: functions.rs  idl.rs  lib.rs
crates/valence-registry/: Cargo.toml  README.md
crates/valence-registry/src/: error.rs  functions.rs  idl.rs  lib.rs  protocols.rs  shards.rs  storage.rs
crates/valence-runtime/: Cargo.toml  README.md
crates/valence-runtime/src/: coordination.rs  core.rs  event_stream.rs  lib.rs  orchestrator.rs  session.rs  session_runtime.rs  transaction_builder.rs  types.rs
crates/valence-sdk/: Cargo.toml  README.md
crates/valence-sdk/docs/: guard_compilation.md
crates/valence-sdk/examples/: compile_guard.rs
crates/valence-sdk/src/: account_abstraction.rs  atomic.rs  client.rs  compute.rs  error.rs  guards.rs  lib.rs  move_semantics.rs  session.rs
e2e/: Anchor.toml  Cargo.nix  Cargo.toml  README.md  justfile
e2e/runtime-integration-test/: Cargo.toml
e2e/runtime-integration-test/src/: main.rs
e2e/test-shard/: Cargo.toml
e2e/test-shard/src/: lib.rs
examples/: Cargo.toml  README.md  batch_operations.rs  direct_operations.rs  guard_demo.rs  session_abstraction.rs
examples/atomic-operations/src/: lib.rs
examples/lending-protocol/src/: lib.rs
examples/lending-with-operations/src/: lib.rs
examples/protocol-scoping/src/: lib.rs
examples/registry-workflow/: Cargo.toml
examples/registry-workflow/src/: lib.rs
examples/simple/: hello_world.rs  hello_world_sdk_usage.rs
examples/zk-transfer-limit/: Cargo.toml  README.md  test_with_deployment.sh
examples/zk-transfer-limit/src/: lib.rs  main.rs
examples/zk-transfer-limit/tests/: integration.rs
programs/account_factory/: Cargo.toml
programs/account_factory/src/: error.rs  lib.rs  state.rs
programs/authorization/: Cargo.toml
programs/authorization/src/: error.rs  lib.rs  lib_minimal.rs  lib_test.rs  pda.rs  state.rs  validation.rs  zk_message.rs
programs/base_account/: Cargo.toml
programs/base_account/src/: cpi.rs  error.rs  instruction.rs  lib.rs  state.rs
programs/kernel/: Cargo.toml
programs/kernel/src/: error.rs  lib.rs  state.rs
programs/processor/: Cargo.toml
programs/processor/src/: error.rs  lib.rs  state.rs
programs/registry/: Cargo.toml
programs/registry/src/: cache.rs  error.rs  instructions.rs  lib.rs  lib.rs.bak  state.rs
programs/sdk/: Cargo.toml  README.md
programs/sdk/src/: client.rs  error.rs  lib.rs  types.rs
programs/session_factory/: Cargo.toml
programs/session_factory/src/: error.rs  lib.rs  state.rs
programs/storage_account/: Cargo.toml
programs/storage_account/src/: error.rs  lib.rs  state.rs
programs/valence-core/: Cargo.toml  run_tests.sh
programs/valence-core/src/: compute_budget.rs  errors.rs  events.rs  lib.rs  operations.rs  state.rs  validation.rs
programs/valence-core/tests/: test_error_cases.rs  test_guards.rs  test_operations.rs  test_session_lifecycle.rs  test_shared_data.rs  test_simple.rs
programs/valence-extensions/: Cargo.toml
programs/valence-extensions/src/: batching.rs  events.rs  lib.rs  math.rs
programs/valence-functions/: Cargo.toml  README.md
programs/valence-functions/src/: escrow.rs  lib.rs  states.rs
programs/valence-functions/tests/: basic_tests.rs  function_tests.rs  guard_tests.rs  protocol_tests.rs  state_tests.rs  test_advanced_functionality.rs  test_error_handling.rs  test_escrow_state.rs  test_functions_integration.rs
programs/valence-kernel/: Cargo.toml  README.md
programs/valence-kernel/src/: bump_allocator.rs  compute_meter.rs  errors.rs  lib.rs  meter.rs  namespace.rs  operations.rs  validation.rs
programs/valence-kernel/tests/: fuzz_tests.rs  integration_basic.rs  test_alignment.rs  test_cascading_invalidation.rs  test_comprehensive.rs  test_error_cases.rs  test_guards.rs  test_operations.rs  test_session_lifecycle.rs  test_shared_data.rs  test_simple.rs  unit_tests.rs
programs/zk_verifier/: Cargo.toml
programs/zk_verifier/src/: error.rs  lib.rs  state.rs
sdk/: Cargo.toml
sdk/src/: client.rs  diff.rs  gateway.rs  lib.rs  registry.rs  shard.rs  types.rs  verification.rs
sdk/tests/: types_test.rs
services/lifecycle_manager/: .gitignore  Cargo.toml  README.md  prometheus.yml
services/lifecycle_manager/migrations/: 001_initial_schema.sql
services/lifecycle_manager/scripts/: setup.sh
services/lifecycle_manager/src/: api.rs  builder.rs  config.rs  db.rs  main.rs  metrics.rs  monitor.rs  orchestrator.rs  types.rs
services/lifecycle_manager/systemd/: valence-lifecycle-manager.service
template_project/: Anchor.toml  Cargo.toml  README.md  run.sh
tests/: Anchor.toml  Cargo.toml  account_factory.ts  authorization.ts  base_account.ts  processor.ts  storage_account.ts  token_transfer.ts
tests/e2e/: README.md  flake.nix  run_e2e_test.sh  test_build.sh  test_capabilities.sh  test_direct.sh  verify_setup.sh
tests/e2e/capability_enforcement_test/: .gitignore  Cargo.toml  README.md
tests/encapsulation/: Cargo.toml  detailed_validation.sh  run_encapsulation_tests.sh  simple_validate.sh  validate.sh
tests/encapsulation/src/: encapsulation_tests.rs  lib.rs  mock_external_program.rs  test_functions.rs
tests/integration/: Cargo.toml  README.md  differentiator_singleton.rs  end_to_end.rs  mod.rs  performance.rs  processor_singleton.rs  scheduler_singleton.rs
tests/integration/keypairs/: registry-keypair.json  shard-keypair.json  test_function-keypair.json
tests/property/: Cargo.toml  README.md
tests/session_v2/: Cargo.toml  performance_benchmarks.rs  session_v2_tests.rs
tests/src/: account_factory_tests.rs  authorization_tests.rs  compute_budget_tests.rs  e2e_tests.rs  integration_tests.rs  lib.rs  processor_tests.rs  registry_tests.rs  session_factory_tests.rs  storage_account_tests.rs  utils.rs  zk_verification_tests.rs
valence-solana/: Anchor.toml  Cargo.toml  README.md
valence-solana/tests/: account_factory.ts  registry.ts  single_use_account.ts
(+546 files in other folders)
