[workspace]
resolver = "2"
members = [
    "test-shard",
    "runtime-integration-test",
]

[workspace.dependencies]
anchor-lang = { version = "0.31.1" }
anchor-client = { version = "0.31.1" }
anchor-spl = { version = "0.31.1" }
solana-program = { version = "2.1.6" }
solana-sdk = { version = "2.1.6" }
solana-client = { version = "2.1.6" }
solana-transaction-status = { version = "2.1.6" }
solana-account-decoder = { version = "2.1.6" }
spl-token = { version = "4.0" }
borsh = { version = "0.10" }
tokio = { version = "1", features = ["full"] }
anyhow = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

# Local dependencies
valence-kernel = { path = "../programs/valence-kernel" }
valence-functions = { path = "../programs/valence-functions" }
valence-sdk = { path = "../crates/valence-sdk" }
valence-runtime = { path = "../crates/valence-runtime" }
valence-registry = { path = "../crates/valence-registry" }

# Force BPF-compatible versions
getrandom = { version = "0.2.16", features = ["custom"] }
ahash = "0.7"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1