[package]
name = "valence-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-lang = { workspace = true }
solana-sdk = { workspace = true }
solana-client = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
sha2 = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"