[package]
name = "valence-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-client = "0.31.1"
anchor-lang = "0.31.1"
solana-sdk = "2.1.6"
solana-client = "2.1.6"
sha2 = "0.10.8"
anyhow = "1.0"
valence-domain-clients = { workspace = true }

registry = { path = "../programs/registry" }
shard = { path = "../programs/shard" }