[package]
name = "template_project"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "test_project"

[[bin]]
name = "template_project_client"
path = "src/client.rs"

[dependencies]
solana-program = "1.18"
borsh = "0.10.3"
# valence-sdk = { path = "../sdk" }  # Commented out for now

# Client dependencies
[dependencies.solana-client]
version = "1.18"
optional = true

[dependencies.solana-sdk]
version = "1.18"

[dependencies.anyhow]
version = "1.0"
optional = true

[dependencies.tokio]
version = "1.0"
features = ["full"]
optional = true

[dependencies.serde]
version = "1.0"
optional = true

[dependencies.serde_json]
version = "1.0"
optional = true

[features]
default = []
client = ["solana-client", "anyhow", "tokio", "serde", "serde_json"]

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

