[package]
name = "valence-tests"
version = "0.1.0"
edition = "2021"

[[test]]
name = "integration"
path = "integration/mod.rs"

[dependencies]
anchor-lang = "0.31.1"
solana-program-test = "2.0"
solana-sdk = "2.0"
tokio = { version = "1.0", features = ["macros"] }
valence-kernel = { path = "../programs/kernel" }

[dev-dependencies]
assert_matches = "1.5"