[workspace]
members = [
    "programs/authorization",
    "programs/registry", 
    "programs/processor",
    "programs/base_account",
    "programs/storage_account",
    "programs/single_use_account",
    "programs/account_factory",
]

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1 