[package]
name = "valence-registry"
version = "0.1.0"
edition = "2021"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(test)'] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
blake3 = "1.5"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
thiserror = "1.0"
chrono = "0.4"
hex = "0.4"
lru = "0.12"
# In-memory storage (SMT implemented internally)
anchor-lang = { workspace = true }
valence-functions = { path = "../../programs/valence-functions" }

[dev-dependencies]
tempfile = "3.8"