[package]
name = "valence-registry"
version = "0.1.0"
edition = "2021"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(test)'] }

[dependencies]
anchor-lang = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
blake3 = "1.3"
thiserror = "1.0"
chrono = "0.4"
hex = "0.4"
# In-memory storage for function and shard metadata
lru = "0.12"
# Local dependencies
valence-functions = { path = "../../programs/valence-functions" }

[dev-dependencies]
tempfile = "3.8"