[package]
name = "valence-runtime"
version = "0.1.0"
edition = "2021"
authors = ["Valence Contributors"]
license = "Apache-2.0"
description = "Off-chain runtime service for Valence protocol orchestration"
repository = "https://github.com/timewave-computer/valence-solana"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(test)'] }

[dependencies]
# Solana SDK and RPC  
solana-sdk = { workspace = true }
# Use workspace-compatible versions
solana-client = { workspace = true }
solana-transaction-status = { workspace = true }
solana-account-decoder = { workspace = true }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"

# WebSocket support - using older compatible versions
tokio-tungstenite = "0.20"
tungstenite = "0.20"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
borsh = { workspace = true }
bincode = "1.3"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# SPL Token support - using compatible versions
spl-token = "7.0"
spl-associated-token-account = "6.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async traits
async-trait = "0.1"

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities - using older compatible versions
dashmap = "5.0"
bytes = "1.0"
base64 = "0.21"
hex = "0.4"

# Crypto utilities - using older compatible versions
sha2 = "0.10"
ed25519-dalek = "1.0"

[dev-dependencies]
mockall = "0.13"
proptest = "1.5"
tempfile = "3.8"