[package]
name = "registry-workflow-example"
version = "0.1.0"
edition = "2021"
authors = ["Valence Contributors"]
description = "Complete registry integration workflow example"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(test)'] }

[dependencies]
anchor-lang = { workspace = true }
valence-core = { path = "../../programs/valence-core", features = ["cpi"] }
valence-functions = { path = "../../programs/valence-functions" }
valence-registry = { path = "../../crates/registry" }
valence-sdk = { path = "../../crates/sdk" }
borsh = { workspace = true }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tokio-test = "0.4" 