[package]
name = "zk-transfer-limit"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zk-transfer-limit"
path = "src/main.rs"

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
solana-sdk = "2.3.0"
solana-program = "2.3.0"
valence-kernel = { path = "../../programs/valence-kernel" }
valence-functions = { path = "../../programs/valence-functions" }

[workspace]
# Empty workspace to prevent inheriting from parent