[package]
name = "zk-transfer-limit"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zk-transfer-limit"
path = "src/main.rs"

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
solana-sdk = "2.1.6"
solana-program = "2.1.6"
valence-kernel = { path = "../../programs/valence-kernel" }
valence-functions = { path = "../../programs/valence-functions" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
solana-program-test = "2.1.6"
valence-sdk = { path = "../../crates/valence-sdk" }
serde_json = "1.0"

[workspace]
# Empty workspace to prevent inheriting from parent