[package]
name = "authorization"
version = "0.1.0"
description = "Valence Protocol Authorization Program for Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "authorization"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.28.0", features = ["init-if-needed"] }
solana-program = "~1.16.0"
thiserror = "1.0.56" 