[package]
name = "base_account"
version = "0.1.0"
description = "Valence Protocol Base Account for Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
anchor-debug = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.29.0", features = ["token", "token_2022"] }
solana-program = "1.18.26"
borsh = "0.10"
thiserror = "1.0.56"
spl-token = { version = "4.0.3", features = ["no-entrypoint"] }
spl-token-2022 = { version = "1.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "2.3.0", features = ["no-entrypoint"] }
spl-memo = { version = "4.0.4", features = ["no-entrypoint"] }

[dev-dependencies]
solana-sdk = "1.18.26" 