[package]
name = "base_account"
version = "0.1.0"
description = "Valence Protocol Base Account for Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
anchor-debug = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["token", "token_2022"] }
borsh = "0.10"
thiserror = "1.0.56"
spl-token = { version = "7.0.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "6.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "6.0.0", features = ["no-entrypoint"] }
spl-memo = { version = "6.0.0", features = ["no-entrypoint"] }

[dev-dependencies]
# Removed solana-sdk to avoid version conflicts 