[package]
name = "valence-sdk"
version = "0.1.0"
edition = "2021"
authors = ["Valence Protocol"]
description = "Rust SDK for Valence Protocol - A unified client library for capability-based execution"
license = "MIT"
repository = "https://github.com/valence-protocol/valence-solana"
homepage = "https://valence-protocol.org"
readme = "README.md"

[dependencies]
# Core Solana dependencies
solana-sdk = "2.0"
solana-client = "2.0"
solana-account-decoder = "2.0"
anchor-lang = "0.31.1"
anchor-client = "0.31.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
borsh = "0.10"

# Async/await support
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
bs58 = "0.4"
hex = "0.4"
uuid = { version = "1.0", default-features = false, features = ["serde"] }
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
shellexpand = "3.0"

# CLI dependencies
clap = { version = "4.0", features = ["derive", "env"], optional = true }

# Logging
log = "0.4"
env_logger = "0.10"

[dev-dependencies]
tokio-test = "0.4"

[features]
default = ["client", "cli"]
client = []
cli = ["clap"]
mock = []

[[bin]]
name = "valence-cli"
path = "src/bin/valence-cli.rs"
required-features = ["cli"]

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"
required-features = ["client"] 