[package]
name = "storage_account"
version = "0.1.0"
description = "Valence Protocol Storage Account Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.29.0", features = ["token", "token_2022"] }
solana-program = "1.18.26"
spl-token = { version = "4.0.3", features = ["no-entrypoint"] }
spl-token-2022 = { version = "1.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "2.3.0", features = ["no-entrypoint"] }
base_account = { path = "../base_account", features = ["cpi"] }
borsh = "0.10.0"
spl-memo = { version = "4.0.4", features = ["no-entrypoint"] } 