[package]
name = "storage_account"
version = "0.1.0"
description = "Valence Protocol Storage Account Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["token", "token_2022"] }
spl-token = { version = "7.0.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "6.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "6.0.0", features = ["no-entrypoint"] }
base_account = { path = "../base_account", features = ["cpi"] }
borsh = "0.10.0"
spl-memo = { version = "6.0.0", features = ["no-entrypoint"] } 