[package]
name = "valence-extensions"
version = "0.1.0"
edition = "2021"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(test)', 'cfg(target_os, values("solana"))'] }
deprecated = "allow"

[dependencies]
anchor-lang = { workspace = true }
valence_core = { path = "../valence-core" }

[features]
math = []
events = []
batching = []
idl-build = ["anchor-lang/idl-build"]
all = ["math", "events", "batching"]