[package]
name = "valence-functions"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
borsh = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
valence-kernel = { path = "../valence-kernel" }