[package]
name = "valence-kernel"
version = "0.1.0"
edition = "2021"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(test)'] }

[lib]
crate-type = ["cdylib", "lib"]
name = "valence_kernel"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
borsh = { workspace = true }
solana-program = { workspace = true }

[dev-dependencies]
anchor-client = { workspace = true }
solana-program-test = "2.1.6"
solana-sdk = { workspace = true }
tokio = { version = "1", features = ["macros"] }
# Add BPF-compatible getrandom
getrandom = { version = "0.2.16", features = ["custom"] }

