[package]
name = "zk_verifier"
version = "0.1.0"
description = "Valence Protocol ZK Proof Verifier Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "zk_verifier"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
borsh = "0.10.0"
thiserror = "1.0.56"
valence-utils = { path = "../../utils" } 