[package]
name = "valence-lifecycle-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-lang = { workspace = true }
solana-sdk = { workspace = true }
solana-client = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
sha2 = { workspace = true }
bs58 = { workspace = true }

# Additional dependencies not in workspace
anchor-client = "0.31.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
prometheus = { version = "0.13", features = ["process"] }
warp = "0.3"
dashmap = "5.5"
futures = "0.3"
lazy_static = "1.4"
reqwest = { version = "0.11", features = ["json"] }
chrono = "0.4"
shellexpand = "3.1"

# Database for state tracking
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "migrate", "chrono"] }

# Message queue for coordination
lapin = "2.3"  # RabbitMQ client

[dev-dependencies]
tempfile = "3"